Changed color of loader

--- a/web/index.html
+++ b/web/index.html
@@ -30,6 +30,8 @@
     <title>Ankan Sikdar</title>
     <link rel="manifest" href="manifest.json" />
 
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <!-- Loading Indicator Style -->
     <style>
       body {
@@ -49,13 +51,13 @@
       }
 
       .loader {
-        border: 16px solid #f3f3f3;
+        border: 16px solid #e0e0e0;
         border-radius: 50%;
         border: 15px solid;
         border-top: 16px solid #000000;
-        border-right: 16px solid #f3f3f3;
-        border-bottom: 16px solid #f3f3f3;
-        border-left: 16px solid #f3f3f3;
+        border-right: 16px solid #000000;
+        border-bottom: 16px solid #000000;
+        border-left: 16px solid #ffffff;
         width: 120px;
         height: 120px;
         -webkit-animation: spin 2s linear infinite;
